// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user list renders correctly 1`] = `
<div
  className="sc-fznZeY iYfOwR"
>
  <h1>
    Admin dashboard
  </h1>
  <div
    className="sc-AxheI sc-fzokOt jLmloA"
  >
    <div>
      <div
        className="sc-fzplWN cMkDXx"
      >
        <h2>
          Users
        </h2>
        <button
          className="sc-AxjAm sc-AxirZ txvCN"
          onClick={[Function]}
        >
          <i
            className="fas fa-plus"
          />
           
          <span
            className="sc-fznyAO bXJKVe"
          >
            Create User
          </span>
        </button>
      </div>
      <div
        className="sc-fznKkj pLnHF"
      />
    </div>
  </div>
</div>
`;

exports[`user list renders correctly 2`] = `
<div
  className="sc-fznZeY iYfOwR"
>
  <h1>
    Admin dashboard
  </h1>
  <div
    className="sc-AxheI sc-fzokOt jLmloA"
  >
    <div>
      <div
        className="sc-fzplWN cMkDXx"
      >
        <h2>
          Users
        </h2>
        <button
          className="sc-AxjAm sc-AxirZ txvCN"
          onClick={[Function]}
        >
          <i
            className="fas fa-plus"
          />
           
          <span
            className="sc-fznyAO bXJKVe"
          >
            Create User
          </span>
        </button>
      </div>
      <div
        className="sc-fznKkj pLnHF"
      >
        <div
          className="sc-AxiKw jxeMgG"
        >
          <p
            className="sc-AxhCb klGZiV"
          >
            test
          </p>
        </div>
        <div
          className="sc-AxiKw jxeMgG"
        >
          <p
            className="sc-AxhCb klGZiV"
          >
            admin
          </p>
          <p
            className="sc-AxhUy hvjDNC"
          >
            admin
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
